General cleanup and added settings
Early returns, added baritone reference to field, renamed renderer handler.